--- a/app/sass/partials/_team.sass
+++ b/app/sass/partials/_team.sass
@@ -35,12 +35,12 @@
                             border-radius: 4px
                             font-weight: 600
                     .mate_position
-                        p
-                            margin: 1.6rem 0 0.6rem 0
-                        span
-                            font-weight: 600
-                            display: inline
-                            word-break: break-all
+                        margin: 1.6rem 0 0.6rem 0
+                    .mate_email
+                        margin: 01.6rem 0 0.6rem 0
+                        font-weight: 600
+                        display: inline
+                        word-break: break-all
 
                     .mate_coordination
                         margin: 0.8rem 0 0 0
