--- a/app/sass/main.css
+++ b/app/sass/main.css
@@ -50,16 +50,10 @@
 @import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@media (min-width: 600px) {
-  .menu ul {
-    gap: 2rem;
-  }
-}
-@media (min-width: 700px) {
-  .menu ul {
-    gap: 1rem;
-  }
-}
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @media (min-width: 150px) {
   .course {
     height: 100%;
@@ -74,15 +68,6 @@
     display: flex;
     font-weight: 400;
     display: -webkit-box;
-    max-height: 13.8888888889vh;
-  }
-  .course .course_description small {
-    margin-top: 0.6rem;
-    display: -webkit-box;
-    -webkit-line-clamp: 5;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
   }
   .card_container_top {
     display: flex;
@@ -233,16 +218,6 @@
   height: 100%;
 }
 
-@media (min-width: 600px) {
-  .menu ul {
-    gap: 2rem;
-  }
-}
-@media (min-width: 700px) {
-  .menu ul {
-    gap: 1rem;
-  }
-}
 @media (min-width: 150px) {
   .lang_switcher {
     @apply text-gray-600;
@@ -270,15 +245,6 @@
   .lang_switcher div {
     margin: 0rem;
   }
-}
-@media (min-width: 900px) {
-  .lang_switcher {
-    position: relative;
-    right: 0rem;
-    top: 0rem;
-  }
-}
-@media (min-width: 600px) {
   .menu ul {
     gap: 2rem;
   }
@@ -287,6 +253,272 @@
   .menu ul {
     gap: 1rem;
   }
+}
+@media (min-width: 900px) {
+  .lang_switcher {
+    position: relative;
+    right: 0rem;
+    top: 0rem;
+  }
+}
+@media screen and (min-width: 150px) {
+  h1 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 28px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 640px) {
+  h1 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 32px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 1400px) {
+  h1 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 38px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 150px) {
+  h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 25px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 640px) {
+  h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 28px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 1400px) {
+  h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 32px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 150px) {
+  h3 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 22px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 640px) {
+  h3 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 1400px) {
+  h3 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 28px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 150px) {
+  h4 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 640px) {
+  h4 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 1400px) {
+  h4 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 150px) {
+  h5 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 640px) {
+  h5 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 1400px) {
+  h5 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 19px;
+    line-height: 140%;
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 150px) {
+  p, label, input, select {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    line-height: 140%;
+  }
+}
+@media screen and (min-width: 640px) {
+  p, label, input, select {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    line-height: 140%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  p, label, input, select {
+    font-family: "Montserrat", sans-serif;
+    font-size: 19px;
+    line-height: 140%;
+  }
+}
+
+@media screen and (min-width: 150px) {
+  small {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    line-height: 140%;
+  }
+}
+@media screen and (min-width: 640px) {
+  small {
+    font-family: "Montserrat", sans-serif;
+    font-size: 13px;
+    line-height: 140%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  small {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    line-height: 140%;
+  }
+}
+
+@media screen and (min-width: 150px) {
+  .xs-text {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    line-height: 140%;
+  }
+}
+@media screen and (min-width: 640px) {
+  .xs-text {
+    font-family: "Montserrat", sans-serif;
+    font-size: 13px;
+    line-height: 140%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .xs-text {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    line-height: 140%;
+  }
+}
+
+@media screen and (min-width: 150px) {
+  button, a {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 640px) {
+  button, a {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  button, a {
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 150px) {
+  button a, a a {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 640px) {
+  button a, a a {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  button a, a a {
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 150px) {
+  .icon {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 640px) {
+  .icon {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .icon {
+    font-size: 16px;
+  }
+}
+
+.about .banner main .contact_info {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.about .banner main .contact_info .contact {
+  width: 50%;
+}
+.about .banner main .contact_info .contact ul {
+  display: flex;
+}
+.about .banner main .contact_info .location {
+  width: 50%;
+  display: flex;
 }
 @media (min-width: 150px) {
   .filter_options {
@@ -447,16 +679,6 @@
   }
   .filter_options .project_card .project_info .project_subtitle {
     font-weight: 500;
-  }
-}
-@media (min-width: 600px) {
-  .menu ul {
-    gap: 2rem;
-  }
-}
-@media (min-width: 700px) {
-  .menu ul {
-    gap: 1rem;
   }
 }
 @media (min-width: 150px) {
@@ -780,10 +1002,11 @@
   border-radius: 4px;
   font-weight: 600;
 }
-.team main .teammates .teammate .mate_info .mate_position p {
+.team main .teammates .teammate .mate_info .mate_position {
   margin: 1.6rem 0 0.6rem 0;
 }
-.team main .teammates .teammate .mate_info .mate_position span {
+.team main .teammates .teammate .mate_info .mate_email {
+  margin: 1.6rem 0 0.6rem 0;
   font-weight: 600;
   display: inline;
   word-break: break-all;
@@ -801,16 +1024,6 @@
   width: 18px;
 }
 
-@media (min-width: 600px) {
-  .menu ul {
-    gap: 2rem;
-  }
-}
-@media (min-width: 700px) {
-  .menu ul {
-    gap: 1rem;
-  }
-}
 @media (min-width: 150px) {
   .tools .tool {
     box-shadow: 0px 10px 13px -7px rgba(0, 0, 0, 0.18);
@@ -1265,6 +1478,41 @@
     align-items: right;
   }
 }
+@media (min-width: 150px) {
+  .banner {
+    margin-top: 46px;
+    height: 7.4em;
+    background-image: url("/assets/img/headers/projects-banner-phone.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: flex-end;
+  }
+  .banner h1 {
+    color: white;
+  }
+  #banner-publications {
+    background-image: url("/assets/img/headers/publications-banner-phone.svg");
+  }
+}
+@media (min-width: 600px) {
+  .banner {
+    margin-top: 106px;
+    height: 14vw;
+    width: 100%;
+    background-image: url("/assets/img/headers/projects-banner-desktop.svg");
+  }
+  #banner-publications {
+    background-image: url("/assets/img/headers/publications-banner-desktop.svg");
+  }
+}
+@media (min-width: 800px) {
+  .banner {
+    margin-top: 60px;
+    height: 14vw;
+  }
+}
 ._publications._recent_publications {
   gap: 8px;
   height: 100%;
@@ -1573,16 +1821,6 @@
   }
 }
 
-@media (min-width: 600px) {
-  .menu ul {
-    gap: 2rem;
-  }
-}
-@media (min-width: 700px) {
-  .menu ul {
-    gap: 1rem;
-  }
-}
 * {
   @apply border-2 border-primary;
 }
@@ -1619,21 +1857,6 @@ TYPOGRAPHY
 }
 *::selection {
   background-color: #b0a7ff;
-}
-
-.banner {
-  margin-top: 60px;
-  height: 13.8vw;
-  background-image: url("/assets/img/headers/header-one.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  align-items: flex-end;
-}
-.banner h1 {
-  padding: 0 0 16px 64px;
-  color: white;
 }
 
 body,
@@ -1711,6 +1934,17 @@ header .menu ul {
   flex-flow: row nowrap;
   justify-content: space-between;
   font-size: 1.2rem;
+}
+@media (min-width: 1400px) {
+  header .imagotype .logotype {
+    font-size: 2.4rem;
+  }
+  header .imagotype .isotype {
+    margin: 0 0 0 3.5rem;
+  }
+  header .imagotype .isotype .logoheader {
+    width: 3.25rem;
+  }
 }
 header li.li-selected a {
   border-bottom: 5px solid #ffe685;
@@ -2170,11 +2404,6 @@ header li a:active {
 /* ==========================================================================
  ABOUT
  ========================================================================== */
-.about main {
-  max-width: 1000px;
-  margin: auto;
-  margin-top: 100px;
-}
 .about main .about_description {
   border-bottom: solid 1.5px #cccccc;
   padding: 9rem 3rem 6rem 7rem;
@@ -2219,10 +2448,6 @@ header li a:active {
 }
 .about main section:last-child {
   border-bottom: solid 1.5px #cccccc;
-}
-.about h1 {
-  font-size: 4rem;
-  font-weight: 400;
 }
 .about h2 {
   color: #333333;
@@ -2295,9 +2520,6 @@ RESPONSIVE
     width: 90.2%;
     align-self: center;
   }
-  .banner {
-    margin-top: 104px;
-  }
 }
 @media (max-width: 800px) {
   .home {
@@ -2324,14 +2546,6 @@ RESPONSIVE
   }
   .home .body .latest_publications {
     width: 100%;
-  }
-  .banner {
-    background-image: url("/assets/img/headers/header-one.png");
-    background-size: cover;
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 8rem;
   }
   .projects main .our_projects {
     padding: 3.5rem 0 0 0;
@@ -2435,9 +2649,6 @@ RESPONSIVE
   header .menu ul li:last-child {
     border-bottom: 0px;
   }
-  .banner {
-    margin-top: 40px;
-  }
   .parallax__layer {
     position: absolute;
     top: 75px;
@@ -2531,34 +2742,6 @@ RESPONSIVE
   .team main .teammates .teammate p {
     font-size: 1.2rem;
   }
-  .about main {
-    margin-top: 20px;
-  }
-  .about main .about_description {
-    padding: 9rem 2rem 3rem 2rem;
-  }
-  .about main .about_description h1 {
-    font-size: 1.2rem;
-  }
-  .about main .about_description p {
-    font-size: 1.2rem;
-  }
-  .about main h2 {
-    padding: 1rem 1rem 1rem 2rem;
-  }
-  .about main .location {
-    flex-flow: column;
-  }
-  .about main .location h2 {
-    font-size: 1.6rem;
-    padding: 1rem 1rem 1rem 0rem;
-  }
-  .about main .location h3 {
-    font-size: 1.2rem;
-  }
-  .about main .location {
-    padding: 4rem 1rem 3rem 3rem;
-  }
   .background .circle {
     width: 15rem;
     height: 15rem;
@@ -2591,4 +2774,4 @@ RESPONSIVE
 }
 body :not(.menu) a:hover {
   text-decoration: none;
-}# sourceMappingURL=main.css.map
+}/*# sourceMappingURL=main.css.map */
