--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -16,14 +16,14 @@ $windowWidth: 100vw
             display: flex
             font-weight:400
             display: -webkit-box
-            max-height: $windowHeight/7.2
+            //max-height: $windowHeight/7.2
             small 
-                margin-top:0.6rem
-                display: -webkit-box
-                -webkit-line-clamp: 5
-                -webkit-box-orient: vertical
-                overflow: hidden
-                text-overflow: ellipsis
+                // margin-top:0.6rem
+                // display: -webkit-box
+                // // -webkit-line-clamp: 5
+                // -webkit-box-orient: vertical
+                // overflow: hidden
+                // text-overflow: ellipsis
     .card_container_top 
         display: flex
         justify-content: space-between 
@@ -56,8 +56,7 @@ $windowWidth: 100vw
             height: 32px
             align-items: center
             div
-                font-size: 1rem
-          
+                font-size: 1rem          
             .course_route
                 margin-top:2px
                 display: flex
