--- a/app/sass/partials/_headermenu.sass
+++ b/app/sass/partials/_headermenu.sass
@@ -23,10 +23,20 @@
         top: 1.9rem
         div
             margin: 0rem 
+    .menu
+        ul
+            gap: 2rem
 
+    
+@media (min-width: 700px)
+    .menu
+        ul
+            gap: 1rem
 
 @media (min-width: 900px)
     .lang_switcher
         position: relative
         right: 0rem
         top: 0rem
+
+
