--- a/app/sass/partials/_headermenu.sass
+++ b/app/sass/partials/_headermenu.sass
@@ -15,6 +15,15 @@
             align-items: center
         svg
             margin: 0rem 0.6rem 0 0
+        a:last-child
+            margin-left: 0.26rem
+
+    .nav_bar 
+        position: fixed
+        top: 0
+        left: 0
+        
+
     
 @media (min-width: 600px) 
     .lang_switcher
