--- a/app/sass/partials/_recentPublications.sass
+++ b/app/sass/partials/_recentPublications.sass
@@ -1,4 +1,5 @@
 @import '../lib/_variables.sass'
+@import "../lib/_mixins.sass"
 
 ._publications._recent_publications
     // display: grid
@@ -76,3 +77,20 @@
         .article_author
             font-weight: $regular
             font-size: 12px
+
+// este código está duplicado en publications.
+//habría que ver si se puede convertir en otro mixin
+.paper_link      
+    @include icon-button-left 
+    @include button    
+    display: flex
+    flex-direction: row
+    //gap: $spacing_xsm
+    align-content: center
+    justify-content: left
+    margin-top: 0.6rem        
+    a 
+        @include big-border-button-blue
+        display: flex
+        align-content: center
+        //margin-top: $spacing_sm     
