--- a/app/sass/partials/_contact.sass
+++ b/app/sass/partials/_contact.sass
@@ -18,17 +18,18 @@ main
         .contact_content
             display: flex
 
-            h4
+            h5
 
                 text-align: left
-                padding-bottom: $spacing-md
+                // padding-bottom: $spacing-sm
             ul
                 display: flex
                 flex-direction: column
                 flex-grow: 1
                 // gap: $spacing-sm
                 li
-                    gap: $spacing-sm
+                    gap: $spacing-md
+                    padding-bottom: $spacing-sm
                     // margin-bottom: 10px 
 
     .location
@@ -59,10 +60,10 @@ main
                 width: 100%
                 height: 100%
 .icon
-    width: 2rem
-    height: auto
-    padding-right: $spacing-xsm
-
+        width: 2rem
+        height: auto
+        padding-right: $spacing-xsm
+h5
 
 h4, h5
     display: flex
