--- a/app/sass/lib/_variables.sass
+++ b/app/sass/lib/_variables.sass
@@ -21,7 +21,9 @@ $ca-or-300: #ff9900
 $ca-or-200: #ffbd1b
 $ca-or-100: #ffe685
 
-//SPACING
+//SPACING 
+// esto está mal planteado y por eso no se usa, no sirve para responsive porque
+// el espaciado está planteado en pixeles
 $spacing_xsm: 8px
 $spacing_sm: 16px
 $spacing_md: 32px
