--- a/app/sass/partials/_home.sass
+++ b/app/sass/partials/_home.sass
@@ -1,18 +1,50 @@
+@import "../lib/_variables.sass"
+@import "../lib/_mixins.sass"
+    
 @media (min-width: 150px)
+    .home
+        h3
+            @apply text-ca_blue-700
+            margin-bottom: 2rem
+   
+        p
+            margin-bottom: 2rem
+            width:80%
+            @apply text-gray-800
     .group_description 
         img
             width:100%
             height:25.6vw
             object-fit: cover
             object-position: 50% 0
+    .award_section 
+      display: flex
+      flex-direction: row
+      .award_card 
+        display: flex
+        flex-direction: row
+        align-self: center
+        align-items: center
+    .award_icon 
+        background: $ca-or-100
+        @apply text-orange-500
+        border-radius: 70px
+        width: 6rem
+        height: 6rem
+        padding: 1.5rem
+          
+        
+
+        .award_card_text 
+          padding: 0 0 0 1rem
+        
+
 
 @media (min-width: 600px)
     .group_description 
         img
             width: auto
             height: 25rem
-
-
 @media (min-width: 900px)
     .group_description 
         
