--- a/app/sass/partials/_recentPublications.sass
+++ b/app/sass/partials/_recentPublications.sass
@@ -10,18 +10,11 @@
     gap: $spacing_xsm
     height: 100%
 
-.article-0
-    // grid-column: 1 / span 2
-    // grid-row: 1 / span 3
-
-.article-1
-    // grid-column: 1 / span 2
-    // grid-row: 4 / span 3
-
-.article-2
-    // grid-column: 3 / span 2
-    // grid-row: 1 / span 5
-
+._recent_publications
+    a 
+        height: 100%
+    .article
+        height:100%
 .more
     // grid-column: 3 / span 2
     // grid-row: 6 / span 1
@@ -29,23 +22,16 @@
     width: fit-content
     align-items: right
     justify-content: right
-.large-article
-    height: calc(100% - 36rem)
-    grid-row-end: span 2
-    margin-bottom: $spacing_xl
+
 
 /* If you need specific responsive adjustments */
 @media (min-width: 900px)
-.large-article
-    transition: height 0.3s ease, width 0.3s ease
-    height: calc(100vh - 36rem)
-    margin-bottom: $spacing_xl
+
 
 .article
     transition: 200ms ease-in-out
     display: flex
     flex-direction: column
-    margin: $spacing_xsm
     @apply bg-gray-50
     &:hover
         transition: 200ms ease-in-out
@@ -69,14 +55,24 @@
         padding-bottom: $spacing_sm
         padding-right: $spacing_md
         padding-top: $spacing_sm
+        .article_date
+            span
+                display: flex
+                small
+                    display: flex
+                    @include border-tag
+            
 
         .article_title
             font-weight: $bold
-            @apply text-black
+            @apply text-gray-800
+            margin-top: 0.6rem
+            margin-bottom: 0
 
         .article_author
             font-weight: $regular
-            font-size: 12px
+            @apply text-gray-800
+            margin-bottom: 1em
 
 // este código está duplicado en publications.
 //habría que ver si se puede convertir en otro mixin
