--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -2,6 +2,15 @@
 //Correcciones: añadir media queries a mixins para ajustar tamaños
 // quizá no sea necesario si los paddings etc están en ems (con rems se quedan igual)
 
+
+@mixin drop-shadow
+    -webkit-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.18)
+    -moz-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.18)
+    box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.18)
+@mixin drop-shadow-lighter
+    -webkit-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.08)
+    -moz-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.08)
+    box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.08)
 //--------------------
 //TAGS
 //-------------------
